gitignore js files on app

--- a/App/index.pug
+++ b/App/index.pug
@@ -6,7 +6,7 @@ html
     link(rel='stylesheet', href='styles.css')
 
     script(src='libs/polyfills.js')
-    script(src='systemjs.config.js')
+    script(src='app/systemjs.config.js')
     script.
       System.import('app').catch(function(err){ console.error(err); });
 
