--- a/App/index.jade
+++ b/App/index.jade
@@ -1,5 +1,5 @@
 doctype
-html(lang='en', ng-app='icbApp')
+html(lang='en', ng-app='app')
   head
     meta(name='viewport', content='initial-scale=1')
     meta(http-equiv='expires', content='0')
