modular directory tree

--- a/App/pages/informative/form/form.jade
+++ b/App/pages/informative/form/form.jade
@@ -3,7 +3,7 @@ icb-title(ng-if="editing") Editar Informativo
 
 md-card
 	form(md-form-validator, ng-submit="submit()")
-		md-content(layout-padding)
+		md-card-content(layout-padding)
 
 			div(layout="column",layout-gt-md="row")
 
