--- a/App/index.jade
+++ b/App/index.jade
@@ -1,75 +1,58 @@
 doctype
-html(lang='en', ng-app='app')
+html(lang='en', ng-app='icbApp')
   head
     meta(name='viewport', content='initial-scale=1')
-    meta(http-equiv='expires', content='0')
     meta(charset='UTF-8')
-    title ICB
+    title ICB - {{pageTitle}}
 
-    link(rel="icon", href="/favicon.ico?v=@NOW")
-    link(rel='stylesheet', href='/theme/libs.min.css?v=@NOW')
-    link(rel='stylesheet', href='/theme/app.css?v=@NOW')
+    link(rel='stylesheet', href='/css/libs.min.css')
+    link(rel='stylesheet', href='/css/app.css')
 
     style.
       .ng-cloak{ display: none }
 
-  body.ng-cloak(layout='column')
-    app-loader
-    app-component-page
+  body.ng-cloak(layout='column', ng-controller='icbApp.appCtrl')
+    icb-loading
+    //icb-login
 
     div(layout="row", flex)
       md-sidenav.md-sidenav-left.md-whiteframe-4dp(layout='column', md-component-id='left', md-is-locked-open="$mdMedia('gt-sm')")
 
         header
           div.logo
-            img(src="/theme/imgs/logo.png")
+            img(src="/imgs/logo.png")
+            p {{user.church.name}}
 
-          p {{user.name}}
+          p {{user.name.firstName}}
 
           md-menu(md-position-mode="target-right target")
             md-button.md-icon-button(ng-click='$mdOpenMenu($event)')
-              md-icon(md-svg-icon="dots-vertical")
+              ng-md-icon(icon='more_vert')
             md-menu-content
               md-menu-item
-                md-button(app-logout)
-                  md-icon(md-svg-icon="exit-to-app")
+                md-button(icb-logout='')
+                  ng-md-icon(icon='exit_to_app')
                   | Sair
 
         nav.menu
-          md-button(ng-href="/", toggle-sidenav)
-            md-icon(md-svg-icon="chart-areaspline", size=24)
+          md-button(ng-href="/", ng-click="toggleSidenav('left')")
+            ng-md-icon(icon="dashboard", size=24)
             | Dashboard
-          md-button(ng-href="/insumos", toggle-sidenav)
-            md-icon(md-svg-icon="shape-plus", size=24)
-            | Insumos
-          md-button(ng-href="/produtos", toggle-sidenav)
-            md-icon(md-svg-icon="cube-outline", size=24)
-            | Produtos
-          md-button(ng-href="/grupos", toggle-sidenav)
-            md-icon(md-svg-icon="group", size=24)
-            | Grupos
-          md-button(ng-href="/impostos", toggle-sidenav)
-            md-icon(md-svg-icon="margin", size=24)
-            | Impostos
-          md-button(ng-href="/cambios", toggle-sidenav)
-            md-icon(md-svg-icon="coin", size=24)
-            | Câmbios
-          md-button(ng-href="/propostas", toggle-sidenav)
-            md-icon(md-svg-icon="clipboard-check", size=24)
-            | Propostas
-          md-button(ng-href="/fluxo-de-caixa", toggle-sidenav)
-            md-icon(md-svg-icon="clock-end", size=24)
-            | Fluxo de Caixa
-          md-button(ng-href="/usuarios", toggle-sidenav)
-            md-icon(md-svg-icon="account-multiple", size=24)
-            | Usuários
-
+          md-button(ng-href="/event", ng-click="toggleSidenav('left')")
+            ng-md-icon(icon="event", size=24)
+            | Agenda
+          md-button(ng-href="/informative", ng-click="toggleSidenav('left')")
+            ng-md-icon(icon="description", size=24)
+            | Informativos
+          md-button(ng-href="/church", ng-click="toggleSidenav('left')")
+            ng-md-icon(icon="business", size=24)
+            | Igreja
 
       #main(layout='column', flex, ng-class="{ 'main-tabs-header': headerTabs.tabs.length > 0 }")
         div
           md-toolbar.main-toolbar(layout='row')
             .md-toolbar-tools
-              md-button.md-icon-button(hide-gt-sm='', toggle-sidenav)
+              md-button.md-icon-button(hide-gt-sm='', ng-click="toggleSidenav()")
                 md-icon(md-svg-icon="menu", size=24)
 
               h1(output-page-title)
@@ -81,6 +64,6 @@ html(lang='en', ng-app='app')
         md-content.scroll-y(layout-padding,md-scroll-y)
           ng-view.main-content
 
-    script(src='/js/libs.min.js?v=@NOW')
-    script(src='/js/all.min.js?v=@NOW')
-    script(src='/js/templates.min.js?v=@NOW')
+    script(src='/js/libs.min.js')
+    script(src='/js/templates.min.js')
+    script(src='/js/all.min.js')
