--- a/App/theme/_mixin.scss
+++ b/App/theme/_mixin.scss
@@ -1,3 +1,7 @@
+@mixin transition($propriedade: all, $tempo: .3s, $ease: ease-in-out, $delay: 0s) {
+  transition: $propriedade $tempo $ease $delay !important;
+}
+
 /* Medias */
 $breakpoints: ( xs: 600px, sm: 960px, md: 1280px, lg: 1920px );
 
