app login complete

--- a/App/components/login/login.jade
+++ b/App/components/login/login.jade
@@ -3,7 +3,7 @@ section.login-page
 
     .content
       .logo
-        img(src="/theme/imgs/logo.png")
+        img(src="/imgs/logo.png")
 
       md-card
         md-card-content
