--- a/App/theme/_variables.scss
+++ b/App/theme/_variables.scss
@@ -1,9 +1,9 @@
 $white: white;
 $border-radius: 2px;
 $success: #8cc63f;
-$danger: #DD2C00;
+$danger: #D50000;
 $info: #55acee;
-$primary: #0eb1ba;
+$primary: #37474F;
 $warning: #efdb13;
 $background-color: #f2f2f2;
 $color: #616161;
