--- a/App/index.pug
+++ b/App/index.pug
@@ -28,25 +28,25 @@ html(lang='en', ng-app='icbApp')
 
           md-menu(md-position-mode="target-right target")
             md-button.md-icon-button(ng-click='$mdOpenMenu($event)')
-              ng-md-icon(icon='more_vert')
+              md-icon(md-svg-icon='more_vert')
             md-menu-content
               md-menu-item
                 md-button(icb-logout='')
-                  ng-md-icon(icon='exit_to_app')
+                  md-icon(md-svg-icon='exit_to_app')
                   | Sair
 
         nav.menu
-          md-button(ng-href="/", ng-click="toggleSidenav('left')")
-            ng-md-icon(icon="dashboard", size=24)
+          md-button(ng-href="/", toggle-sidenav)
+            md-icon(md-svg-icon="chart-areaspline", size=24)
             | Dashboard
-          md-button(ng-href="/event", ng-click="toggleSidenav('left')")
-            ng-md-icon(icon="event", size=24)
+          md-button(ng-href="/event", toggle-sidenav)
+            md-icon(md-svg-icon="calendar", size=24)
             | Agenda
-          md-button(ng-href="/informative", ng-click="toggleSidenav('left')")
-            ng-md-icon(icon="description", size=24)
+          md-button(ng-href="/informativos", toggle-sidenav)
+            md-icon(md-svg-icon="newspaper", size=24)
             | Informativos
-          md-button(ng-href="/church", ng-click="toggleSidenav('left')")
-            ng-md-icon(icon="business", size=24)
+          md-button(ng-href="/church", toggle-sidenav)
+            md-icon(md-svg-icon="church", size=24)
             | Igreja
 
       #main(layout='column', flex, ng-class="{ 'main-tabs-header': headerTabs.tabs.length > 0 }")
