--- a/App/theme/_components.scss
+++ b/App/theme/_components.scss
@@ -1,9 +1,59 @@
-md-content {
-    color: inherit;
-    background: $background-color;
+md-toolbar {
+  position: relative;
+  min-height: 0;
+
+  &.main-toolbar {
+    background: $white;
+    color: $color;
+    fill: $color;
+
+    md-icon {
+      fill: currentColor;
+      color: inherit;
+    }
+
+    + md-toolbar {
+      &:before {
+        box-shadow: 0 2px 4px rgba(0,0,0,.14);
+      }
+
+      md-tabs-wrapper {
+        background: white !important;
+
+        md-tab-item,
+        md-icon {
+          color: $color !important;
+          user-select: none;
+        }
+      }
+    }
+  }
+
+  &:before {
+    top: 0;
+    box-shadow: 0 0 4px rgba(0,0,0,.14),0 -1px 8px rgba(0,0,0,.28);
+    content: '';
+    height: 100%;
+    left: 0;
+    right: 0;
+    position: absolute;
+    will-change: top,left;
+    z-index: -1;
+  }
 }
 
-ng-md-icon {
+md-content {
+  color: inherit;
+  background: $background-color;
+}
+
+md-icon {
+  color: inherit;
+
+  &:focus {
+    outline: none;
+  }
+
   &[size='32'] {
     width: 32px;
     height: 32px;
@@ -11,22 +61,23 @@ ng-md-icon {
 
   svg {
     vertical-align: middle;
-    fill: inherit;
+    fill: currentColor;
+    color: inherit;
   }
 }
 
-.md-button:not(.md-fab) ng-md-icon + span {
+.md-button:not(.md-fab) md-icon + span {
   margin-left: 10px;
   display: inline-block;
 }
 
 .md-button.md-fab.md-fab-bottom-right {
-    position: fixed;
+  position: fixed;
 
-    @include media-max-breakpoints(xs) {
-        right: 5px;
-        bottom: 5px;
-    }
+  @include media-max-breakpoints(xs) {
+    right: 5px;
+    bottom: 5px;
+  }
 }
 
 //
@@ -89,12 +140,10 @@ md-input-container {
 }
 
 md-dialog {
-
   md-dialog-actions {
     border-top: 1px solid $border-color;
     padding: 10px 20px;
   }
-
 }
 
 .ng-submitted,
@@ -107,7 +156,7 @@ md-datepicker {
     }
 
     md-icon {
-      fill: rgba($danger, 0.8);
+      fill: rgba($danger, .8);
     }
 
     & + [ng-messages] {
@@ -130,7 +179,7 @@ icb-loading > div {
   z-index: 10000;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, .5);
 
   md-progress-circular {
     position: absolute;
@@ -184,7 +233,7 @@ icb-place-maps {
         box-sizing: border-box;
         height: 32px;
         outline: none;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 2px 6px rgba(0, 0, 0, .3);
         left: 0 !important;
       }
     }
