--- a/App/index.pug
+++ b/App/index.pug
@@ -39,7 +39,7 @@ html(lang='en', ng-app='icbApp')
           md-button(ng-href="/", toggle-sidenav)
             md-icon(md-svg-icon="chart-areaspline", size=24)
             | Dashboard
-          md-button(ng-href="/event", toggle-sidenav)
+          md-button(ng-href="/agenda", toggle-sidenav)
             md-icon(md-svg-icon="calendar", size=24)
             | Agenda
           md-button(ng-href="/informativos", toggle-sidenav)
