error page and appoiment api

--- a/App/theme/app.scss
+++ b/App/theme/app.scss
@@ -6,6 +6,7 @@
 @import '../components/component-page/componentPage';
 @import '../components/loader/loader';
 @import '../components/login/login';
+@import '../components/error-page/errorPage';
 
 .padding {
   padding: 8px;
