--- a/App/theme/_variables.scss
+++ b/App/theme/_variables.scss
@@ -1,17 +1,18 @@
 $white: white;
+$accent: #335d3b;
 $border-radius: 2px;
 $success: #8cc63f;
-$danger: #D50000;
+$danger: #d50000;
 $info: #55acee;
-$primary: #37474F;
+$primary: #37474f;
 $warning: #efdb13;
 $background-color: #f2f2f2;
 $color: #616161;
 $border-color: #ccc;
 $border-radius-base: 3px;
 //Sidemenu
-$side-background: #37474F;
+$side-background: #37474f;
 $side-color: white;
 $side-header: #263238;
 //Border
-$border-color: #F3F3F3;
+$border-color: #f3f3f3;
