--- a/App/pages/church/edit/edit.pug
+++ b/App/pages/church/edit/edit.pug
@@ -24,7 +24,7 @@ md-card
 					md-messages
 						md-message(required) Obrigatório
 
-		icb-place-maps(ng-model="model.location",placeholder="Endereço")
+		app-place-maps(ng-model="model.location",placeholder="Endereço")
 
 		div(align="right")
 			md-button.md-raised.md-accent(type="submit") Salvar
