--- a/App/pages/informative/form/form.pug
+++ b/App/pages/informative/form/form.pug
@@ -1,5 +1,5 @@
-icb-title(ng-if="!editing") Novo Informativo
-icb-title(ng-if="editing") Editar Informativo
+app-title(ng-if="!editing") Novo Informativo
+app-title(ng-if="editing") Editar Informativo
 
 form(md-form-validator, ng-submit="$ctrl.submit()")
   md-card
