--- a/App/pages/informative/list/list.pug
+++ b/App/pages/informative/list/list.pug
@@ -1,4 +1,4 @@
-icb-title Informativos
+app-title Informativos
 
 md-button.md-fab.md-fab-bottom-right(href="/informativos/novo")
 	md-icon(md-svg-icon="plus",size=32)
