fix identity database, fix app page title, datepicker directive, roboto fonts

--- a/App/index.pug
+++ b/App/index.pug
@@ -56,7 +56,7 @@ html(lang='en', ng-app='app')
               md-button.md-icon-button(hide-gt-sm='', toggle-sidenav)
                 md-icon(md-svg-icon="menu", size=24)
 
-              h1(app-output-page-title)
+              h1(app-output-title)
 
           md-toolbar(ng-show="headerTabs.tabs.length > 0")
             md-tabs(md-selected="headerTabs.current")
