--- a/App/pages/appointment/form/form.pug
+++ b/App/pages/appointment/form/form.pug
@@ -1,6 +1,6 @@
 app-title
-  span(ng-if="!editing") Novo Evento
-  span(ng-if="editing") Editar Evento
+  span(ng-show="!$ctrl.editing") Novo Evento
+  span(ng-show="$ctrl.editing") Editar Evento
 
 form(md-form-validator, ng-submit="$ctrl.submit()", name="eventForm")
   md-card
@@ -12,48 +12,46 @@ form(md-form-validator, ng-submit="$ctrl.submit()", name="eventForm")
             label Nome
             input(ng-model='$ctrl.model.name', name='name', required)
             md-messages
-              md-message(required) Obrigatório
 
           md-input-container.md-block
             label Descrição
             textarea(ng-model='$ctrl.model.description', name='description')
 
-          ng-form(layout="row",layout-xs="column", ng-repeat="date in $ctrl.model.dates", name="eventDateForm")
-            div(flex)
-              md-datepicker(ng-model="date.date", name="date", md-placeholder="Data", required)
-              div(ng-messages="eventDateForm.date.$error", ng-show="eventForm.$submitted || eventDateForm.date.$touched", md-auto-hide='false')
-                div(ng-message='required') Obrigatório
+          div(ng-repeat="date in $ctrl.model.dates")
+            ng-form(layout="row",layout-xs="column", md-form-validator, name="eventDateForm")
+              div(flex)
+                md-input-container.md-block
+                  label Data
+                  input(ng-model='$ctrl.model.date', name='name', required, datepicker)
+                  md-messages
 
-            div(flex)
-              md-input-container.md-block
-                label Inicio
-                input(ng-model='date.begin', name="begin",mask="29:59", hour, required)
-                div(ng-messages="eventDateForm.begin.$error", ng-show="eventForm.$submitted || eventDateForm.begin.$touched", md-auto-hide='false')
-                  div(ng-message='required') Obrigatório
-                  div(ng-message='mask') Hora inválida
-                  div(ng-message='hour') Hora inválida
+              div(flex)
+                md-input-container.md-block
+                  label Inicio
+                  input(ng-model='date.begin', name="begin",mask="29:59", hour, required)
+                  md-messages
 
-            div(flex)
-              md-input-container.md-block
-                label Termino
-                input(ng-model='date.end', name="end", mask="29:59", hour, required)
-                div(ng-messages="eventDateForm.end.$error", ng-show="eventForm.$submitted || eventDateForm.end.$touched", md-auto-hide='false')
-                  div(ng-message='required') Obrigatório
-                  div(ng-message='mask') Hora inválida
-                  div(ng-message='hour') Hora inválida
+              div(flex)
+                md-input-container.md-block
+                  label Termino
+                  input(ng-model='date.end', name="end", mask="29:59", hour, required)
+                  md-messages
 
-            md-button.md-icon-button.md-warn.m-input(ng-click="$ctrl.removeDate(date)",ng-show="$ctrl.model.dates.length > 1")
+            md-button.md-icon-button.text-danger-hover.m-input(ng-click="$ctrl.removeDate(date)",ng-show="$ctrl.model.dates.length > 1")
               md-icon(md-svg-icon="delete")
               md-tooltip Remover
 
 
           div(align="right")
-            md-button.md-raised.md-accent(ng-click="$ctrl.addDate()") Adicionar
+            md-button.md-raised.md-primary(ng-click="$ctrl.addDate()") Adicionar
 
         div(flex=5,hide-sm,hide-xs)
 
         //div(flex)
           app-place-maps(ng-model="$ctrl.model.location",placeholder="Local")
 
-  md-dialog-actions(layout="row")
-    md-button.md-raised.md-accent(type="submit") Salvar
+  div(layout="row")
+    div(flex)
+      md-button.md-raised(ng-href="/agenda") Cancelar
+    div.text-right(flex)
+      md-button.md-raised.md-accent(type="submit") Salvar
